src/metrics/snapshots/big_code_analysis__metrics__abc__tests__rust_let_initializers_immutable_and_mutable_count.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 6,
  "branches": 0,
  "conditions": 0,
  "magnitude": 6.0,
  "assignments_average": 3.0,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 6,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
