src/metrics/snapshots/big_code_analysis__metrics__abc__tests__rust_try_operator_is_branch.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 3,
  "conditions": 0,
  "magnitude": 3.1622776601683795,
  "assignments_average": 0.5,
  "branches_average": 1.5,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 3,
  "conditions_min": 0,
  "conditions_max": 0
}
