src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tcl_comparisons_and_boolean_ops_count_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 10.0,
  "branches": 0.0,
  "conditions": 10.0,
  "magnitude": 14.142135623730951,
  "assignments_average": 5.0,
  "branches_average": 0.0,
  "conditions_average": 5.0,
  "assignments_min": 0.0,
  "assignments_max": 10.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 10.0
}
